[gd_scene load_steps=5 format=2]

[ext_resource path="res://Lanterna/BateriaLanterna/BateriaLanterna.material" type="Material" id=1]
[ext_resource path="res://Lanterna/BateriaLanterna.gd" type="Script" id=2]

[sub_resource type="ArrayMesh" id=1]
resource_name = "Cube"
surfaces/0 = {
"aabb": AABB( -0.288815, -1, -0.348379, 1.58235, 2.00001, 0.696757 ),
"array_data": PoolByteArray( 250, 170, 86, 190, 0, 0, 128, 63, 250, 170, 86, 190, 183, 73, 183, 0, 153, 205, 51, 127, 0, 59, 0, 56, 250, 170, 86, 62, 0, 0, 128, 63, 250, 170, 86, 62, 73, 73, 73, 0, 167, 89, 0, 127, 0, 57, 0, 52, 250, 170, 86, 62, 0, 0, 128, 63, 250, 170, 86, 190, 73, 73, 183, 0, 167, 89, 0, 127, 0, 57, 0, 56, 158, 238, 54, 63, 0, 0, 128, 63, 250, 170, 86, 62, 73, 73, 73, 0, 167, 89, 0, 127, 0, 57, 0, 52, 206, 91, 43, 63, 240, 202, 72, 191, 250, 170, 86, 62, 38, 218, 114, 0, 127, 0, 0, 129, 0, 54, 0, 52, 158, 238, 54, 63, 0, 0, 128, 191, 250, 170, 86, 62, 73, 183, 73, 0, 89, 89, 0, 127, 0, 54, 0, 52, 250, 170, 86, 190, 0, 0, 128, 63, 250, 170, 86, 62, 183, 73, 73, 0, 51, 103, 205, 127, 0, 57, 0, 60, 250, 170, 86, 190, 0, 0, 128, 191, 250, 170, 86, 190, 183, 183, 183, 0, 205, 103, 205, 127, 0, 54, 0, 58, 250, 170, 86, 190, 0, 0, 128, 191, 250, 170, 86, 62, 183, 183, 73, 0, 205, 103, 51, 127, 0, 54, 0, 60, 250, 170, 86, 62, 0, 0, 128, 191, 250, 170, 86, 190, 73, 183, 183, 0, 89, 89, 0, 127, 0, 54, 0, 56, 250, 170, 86, 190, 0, 0, 128, 191, 250, 170, 86, 62, 183, 183, 73, 0, 103, 205, 51, 127, 0, 48, 0, 52, 250, 170, 86, 190, 0, 0, 128, 191, 250, 170, 86, 190, 183, 183, 183, 0, 103, 205, 205, 127, 0, 48, 0, 56, 250, 170, 86, 62, 0, 0, 128, 191, 250, 170, 86, 62, 73, 183, 73, 0, 89, 89, 0, 127, 0, 54, 0, 52, 195, 95, 40, 62, 240, 202, 72, 191, 250, 170, 86, 190, 38, 218, 142, 0, 127, 0, 0, 127, 0, 54, 0, 56, 59, 50, 151, 62, 0, 0, 128, 63, 250, 170, 86, 190, 183, 73, 183, 0, 153, 205, 51, 127, 0, 59, 0, 56, 158, 238, 54, 63, 0, 0, 128, 63, 250, 170, 86, 190, 73, 73, 183, 0, 167, 89, 0, 127, 0, 57, 0, 56, 195, 95, 40, 190, 240, 202, 72, 191, 250, 170, 86, 62, 218, 218, 114, 0, 127, 0, 0, 129, 0, 48, 0, 52, 59, 50, 151, 62, 0, 0, 128, 63, 250, 170, 86, 62, 183, 73, 73, 0, 51, 103, 205, 127, 0, 57, 0, 60, 59, 50, 151, 62, 0, 0, 128, 191, 250, 170, 86, 190, 183, 183, 183, 0, 205, 103, 205, 127, 0, 54, 0, 58, 59, 50, 151, 62, 0, 0, 128, 191, 250, 170, 86, 62, 183, 183, 73, 0, 205, 103, 51, 127, 0, 54, 0, 60, 158, 238, 54, 63, 0, 0, 128, 191, 250, 170, 86, 190, 73, 183, 183, 0, 89, 89, 0, 127, 0, 54, 0, 56, 59, 50, 151, 62, 0, 0, 128, 191, 250, 170, 86, 62, 183, 183, 73, 0, 103, 205, 51, 127, 0, 48, 0, 52, 59, 50, 151, 62, 0, 0, 128, 191, 250, 170, 86, 190, 183, 183, 183, 0, 103, 205, 205, 127, 0, 48, 0, 56, 251, 220, 76, 63, 0, 0, 128, 63, 250, 170, 86, 62, 183, 73, 73, 0, 153, 205, 205, 127, 0, 59, 0, 52, 211, 79, 150, 63, 240, 202, 72, 63, 250, 170, 86, 62, 38, 38, 114, 0, 127, 0, 0, 129, 0, 57, 0, 52, 59, 25, 156, 63, 0, 0, 128, 63, 250, 170, 86, 62, 73, 73, 73, 0, 167, 89, 0, 127, 0, 57, 0, 52, 251, 220, 76, 63, 0, 0, 128, 63, 250, 170, 86, 190, 183, 73, 183, 0, 153, 205, 51, 127, 0, 59, 0, 56, 59, 25, 156, 63, 0, 0, 128, 63, 250, 170, 86, 190, 73, 73, 183, 0, 167, 89, 0, 127, 0, 57, 0, 56, 218, 87, 174, 62, 240, 202, 72, 63, 250, 170, 86, 62, 218, 38, 114, 0, 127, 0, 0, 129, 0, 57, 0, 60, 251, 220, 76, 63, 0, 0, 128, 63, 250, 170, 86, 62, 183, 73, 73, 0, 51, 103, 205, 127, 0, 57, 0, 60, 251, 220, 76, 63, 0, 0, 128, 191, 250, 170, 86, 190, 183, 183, 183, 0, 205, 103, 205, 127, 0, 54, 0, 58, 251, 220, 76, 63, 0, 0, 128, 191, 250, 170, 86, 62, 183, 183, 73, 0, 205, 103, 51, 127, 0, 54, 0, 60, 59, 25, 156, 63, 0, 0, 128, 191, 250, 170, 86, 190, 73, 183, 183, 0, 89, 89, 0, 127, 0, 54, 0, 56, 251, 220, 76, 63, 0, 0, 128, 191, 250, 170, 86, 62, 183, 183, 73, 0, 103, 205, 51, 127, 0, 48, 0, 52, 251, 220, 76, 63, 0, 0, 128, 191, 250, 170, 86, 190, 183, 183, 183, 0, 103, 205, 205, 127, 0, 48, 0, 56, 59, 25, 156, 63, 0, 0, 128, 191, 250, 170, 86, 62, 73, 183, 73, 0, 89, 89, 0, 127, 0, 54, 0, 52, 218, 87, 174, 62, 240, 202, 72, 63, 250, 170, 86, 190, 218, 38, 142, 0, 127, 0, 0, 127, 0, 59, 0, 56, 62, 149, 159, 63, 86, 68, 67, 191, 199, 83, 199, 61, 114, 218, 38, 0, 36, 121, 12, 127, 127, 57, 255, 52, 108, 146, 165, 63, 96, 111, 17, 191, 199, 83, 199, 61, 73, 73, 73, 0, 205, 103, 205, 127, 128, 58, 255, 52, 62, 149, 159, 63, 96, 111, 17, 191, 199, 83, 199, 61, 114, 38, 38, 0, 220, 121, 244, 127, 128, 58, 255, 52, 62, 149, 159, 63, 36, 76, 232, 62, 68, 51, 71, 62, 73, 183, 73, 0, 97, 78, 237, 127, 0, 57, 0, 52, 190, 213, 119, 190, 182, 191, 87, 63, 68, 51, 71, 62, 183, 73, 73, 0, 103, 51, 51, 127, 0, 54, 0, 0, 190, 213, 119, 190, 39, 76, 232, 62, 68, 51, 71, 62, 183, 183, 73, 0, 97, 178, 19, 127, 0, 54, 0, 52, 62, 149, 159, 63, 180, 191, 87, 63, 68, 51, 71, 62, 73, 73, 73, 0, 103, 205, 205, 127, 0, 57, 0, 60, 190, 213, 119, 190, 182, 191, 87, 63, 68, 51, 71, 190, 183, 73, 183, 0, 103, 51, 205, 127, 0, 54, 0, 58, 190, 213, 119, 190, 182, 191, 87, 63, 68, 51, 71, 62, 183, 73, 73, 0, 103, 51, 51, 127, 0, 54, 0, 60, 62, 149, 159, 63, 105, 8, 13, 63, 199, 83, 199, 61, 114, 218, 38, 0, 36, 121, 12, 127, 127, 57, 255, 52, 108, 146, 165, 63, 92, 221, 62, 63, 199, 83, 199, 61, 73, 73, 73, 0, 205, 103, 205, 127, 128, 58, 255, 52, 62, 149, 159, 63, 92, 221, 62, 63, 199, 83, 199, 61, 114, 38, 38, 0, 220, 121, 244, 127, 128, 58, 255, 52, 62, 149, 159, 63, 36, 76, 232, 62, 68, 51, 71, 190, 73, 183, 183, 0, 97, 78, 19, 127, 0, 57, 0, 56, 190, 213, 119, 190, 39, 76, 232, 62, 68, 51, 71, 190, 183, 183, 183, 0, 97, 178, 237, 127, 0, 54, 0, 56, 62, 149, 159, 63, 180, 191, 87, 63, 68, 51, 71, 190, 73, 73, 183, 0, 103, 205, 51, 127, 0, 57, 0, 58, 190, 213, 119, 190, 85, 68, 67, 191, 199, 83, 199, 189, 142, 218, 218, 0, 36, 135, 12, 127, 0, 53, 0, 55, 160, 223, 147, 190, 94, 111, 17, 191, 199, 83, 199, 189, 183, 73, 183, 0, 205, 153, 205, 127, 255, 49, 0, 55, 190, 213, 119, 190, 94, 111, 17, 191, 199, 83, 199, 189, 142, 38, 218, 0, 220, 135, 244, 127, 255, 49, 0, 55, 190, 213, 119, 190, 171, 38, 92, 191, 68, 51, 71, 62, 183, 183, 73, 0, 97, 178, 19, 127, 0, 54, 0, 52, 62, 149, 159, 63, 20, 26, 241, 190, 68, 51, 71, 62, 73, 73, 73, 0, 103, 205, 205, 127, 0, 57, 0, 0, 190, 213, 119, 190, 17, 26, 241, 190, 68, 51, 71, 62, 183, 73, 73, 0, 103, 51, 51, 127, 0, 54, 0, 0, 62, 149, 159, 63, 20, 26, 241, 190, 68, 51, 71, 62, 73, 73, 73, 0, 103, 205, 205, 127, 0, 57, 0, 60, 190, 213, 119, 190, 17, 26, 241, 190, 68, 51, 71, 190, 183, 73, 183, 0, 103, 51, 205, 127, 0, 54, 0, 58, 190, 213, 119, 190, 17, 26, 241, 190, 68, 51, 71, 62, 183, 73, 73, 0, 103, 51, 51, 127, 0, 54, 0, 60, 190, 213, 119, 190, 105, 8, 13, 63, 199, 83, 199, 189, 142, 218, 218, 0, 36, 135, 12, 127, 0, 53, 0, 55, 160, 223, 147, 190, 96, 221, 62, 63, 199, 83, 199, 189, 183, 73, 183, 0, 205, 153, 205, 127, 255, 49, 0, 55, 190, 213, 119, 190, 96, 221, 62, 63, 199, 83, 199, 189, 142, 38, 218, 0, 220, 135, 244, 127, 255, 49, 0, 55, 62, 149, 159, 63, 172, 38, 92, 191, 68, 51, 71, 190, 73, 183, 183, 0, 97, 78, 19, 127, 0, 57, 0, 56, 190, 213, 119, 190, 171, 38, 92, 191, 68, 51, 71, 190, 183, 183, 183, 0, 97, 178, 237, 127, 0, 54, 0, 56, 62, 149, 159, 63, 20, 26, 241, 190, 68, 51, 71, 190, 73, 73, 183, 0, 103, 205, 51, 127, 0, 57, 0, 58, 190, 213, 119, 190, 96, 221, 62, 63, 199, 83, 199, 61, 142, 38, 38, 0, 220, 135, 12, 127, 255, 49, 255, 52, 190, 213, 119, 190, 182, 191, 87, 63, 68, 51, 71, 190, 183, 73, 183, 0, 205, 153, 205, 127, 0, 48, 0, 56, 62, 149, 159, 63, 105, 8, 13, 63, 207, 83, 199, 189, 114, 218, 218, 0, 36, 121, 244, 127, 127, 57, 0, 55, 190, 213, 119, 190, 105, 8, 13, 63, 199, 83, 199, 61, 142, 218, 38, 0, 36, 135, 244, 127, 0, 53, 255, 52, 190, 213, 119, 190, 182, 191, 87, 63, 68, 51, 71, 62, 183, 73, 73, 0, 205, 153, 51, 127, 0, 48, 0, 52, 62, 149, 159, 63, 94, 221, 62, 63, 207, 83, 199, 189, 114, 38, 218, 0, 220, 121, 12, 127, 128, 58, 0, 55, 62, 149, 159, 63, 180, 191, 87, 63, 68, 51, 71, 62, 73, 73, 73, 0, 205, 103, 205, 127, 0, 59, 0, 52, 62, 149, 159, 63, 180, 191, 87, 63, 68, 51, 71, 190, 73, 73, 183, 0, 205, 103, 51, 127, 0, 59, 0, 56, 190, 213, 119, 190, 94, 111, 17, 191, 199, 83, 199, 61, 142, 38, 38, 0, 220, 135, 12, 127, 255, 49, 255, 52, 190, 213, 119, 190, 17, 26, 241, 190, 68, 51, 71, 190, 183, 73, 183, 0, 205, 153, 205, 127, 0, 48, 0, 56, 62, 149, 159, 63, 172, 38, 92, 191, 68, 51, 71, 62, 73, 183, 73, 0, 97, 78, 237, 127, 0, 57, 0, 52, 62, 149, 159, 63, 86, 68, 67, 191, 199, 83, 199, 189, 114, 218, 218, 0, 36, 121, 244, 127, 127, 57, 0, 55, 190, 213, 119, 190, 85, 68, 67, 191, 199, 83, 199, 61, 142, 218, 38, 0, 36, 135, 244, 127, 0, 53, 255, 52, 190, 213, 119, 190, 17, 26, 241, 190, 68, 51, 71, 62, 183, 73, 73, 0, 205, 153, 51, 127, 0, 48, 0, 52, 62, 149, 159, 63, 96, 111, 17, 191, 199, 83, 199, 189, 114, 38, 218, 0, 220, 121, 12, 127, 128, 58, 0, 55, 62, 149, 159, 63, 20, 26, 241, 190, 68, 51, 71, 62, 73, 73, 73, 0, 205, 103, 205, 127, 0, 59, 0, 52, 62, 149, 159, 63, 20, 26, 241, 190, 68, 51, 71, 190, 73, 73, 183, 0, 205, 103, 51, 127, 0, 59, 0, 56, 108, 146, 165, 63, 105, 8, 13, 63, 207, 83, 199, 189, 73, 183, 183, 0, 51, 103, 205, 127, 127, 57, 0, 55, 108, 146, 165, 63, 105, 8, 13, 63, 199, 83, 199, 61, 73, 183, 73, 0, 51, 103, 51, 127, 127, 57, 255, 52, 160, 223, 147, 190, 105, 8, 13, 63, 199, 83, 199, 189, 183, 183, 183, 0, 51, 153, 51, 127, 0, 53, 0, 55, 160, 223, 147, 190, 96, 221, 62, 63, 199, 83, 199, 61, 183, 73, 73, 0, 205, 153, 51, 127, 255, 49, 255, 52, 108, 146, 165, 63, 96, 111, 17, 191, 199, 83, 199, 189, 73, 73, 183, 0, 205, 103, 51, 127, 128, 58, 0, 55, 108, 146, 165, 63, 86, 68, 67, 191, 199, 83, 199, 61, 73, 183, 73, 0, 51, 103, 51, 127, 127, 57, 255, 52, 108, 146, 165, 63, 86, 68, 67, 191, 199, 83, 199, 189, 73, 183, 183, 0, 51, 103, 205, 127, 127, 57, 0, 55, 160, 223, 147, 190, 85, 68, 67, 191, 199, 83, 199, 189, 183, 183, 183, 0, 51, 153, 51, 127, 0, 53, 0, 55, 160, 223, 147, 190, 94, 111, 17, 191, 199, 83, 199, 61, 183, 73, 73, 0, 205, 153, 51, 127, 255, 49, 255, 52, 160, 223, 147, 190, 105, 8, 13, 63, 199, 83, 199, 61, 183, 183, 73, 0, 51, 153, 205, 127, 0, 53, 255, 52, 160, 223, 147, 190, 85, 68, 67, 191, 199, 83, 199, 61, 183, 183, 73, 0, 51, 153, 205, 127, 0, 53, 255, 52, 108, 146, 165, 63, 94, 221, 62, 63, 207, 83, 199, 189, 73, 73, 183, 0, 205, 103, 51, 127, 128, 58, 0, 55, 203, 111, 88, 63, 240, 202, 72, 191, 250, 170, 86, 62, 218, 218, 114, 0, 127, 0, 0, 129, 0, 54, 0, 60, 203, 111, 88, 63, 240, 202, 72, 63, 171, 94, 178, 62, 183, 73, 73, 0, 127, 0, 0, 129, 0, 57, 0, 60, 203, 111, 88, 63, 240, 202, 72, 63, 250, 170, 86, 62, 218, 38, 114, 0, 127, 0, 0, 129, 0, 57, 0, 60, 195, 95, 40, 62, 240, 202, 72, 63, 250, 170, 86, 62, 38, 38, 114, 0, 127, 0, 0, 129, 0, 57, 0, 52, 195, 95, 40, 62, 240, 202, 72, 191, 171, 94, 178, 62, 73, 183, 73, 0, 51, 103, 51, 127, 0, 54, 0, 52, 195, 95, 40, 62, 240, 202, 72, 191, 250, 170, 86, 62, 38, 218, 114, 0, 127, 0, 0, 129, 0, 54, 0, 52, 218, 87, 174, 62, 240, 202, 72, 191, 250, 170, 86, 62, 218, 218, 114, 0, 127, 0, 0, 129, 0, 54, 0, 60, 218, 87, 174, 62, 240, 202, 72, 63, 171, 94, 178, 62, 183, 73, 73, 0, 127, 0, 0, 129, 0, 57, 0, 60, 211, 79, 150, 63, 240, 202, 72, 191, 250, 170, 86, 190, 38, 218, 142, 0, 127, 0, 0, 127, 0, 54, 0, 56, 211, 79, 150, 63, 240, 202, 72, 63, 171, 94, 178, 190, 73, 73, 183, 0, 205, 103, 51, 127, 0, 57, 0, 56, 211, 79, 150, 63, 240, 202, 72, 63, 250, 170, 86, 190, 38, 38, 142, 0, 127, 0, 0, 127, 0, 57, 0, 56, 195, 95, 40, 190, 240, 202, 72, 191, 250, 170, 86, 62, 218, 218, 114, 0, 127, 0, 0, 129, 0, 54, 0, 60, 195, 95, 40, 190, 240, 202, 72, 63, 171, 94, 178, 62, 183, 73, 73, 0, 127, 0, 0, 129, 0, 57, 0, 60, 195, 95, 40, 190, 240, 202, 72, 63, 250, 170, 86, 62, 218, 38, 114, 0, 127, 0, 0, 129, 0, 57, 0, 60, 206, 91, 43, 63, 240, 202, 72, 191, 250, 170, 86, 190, 38, 218, 142, 0, 127, 0, 0, 127, 0, 54, 0, 56, 206, 91, 43, 63, 240, 202, 72, 63, 171, 94, 178, 190, 73, 73, 183, 0, 205, 103, 51, 127, 0, 57, 0, 56, 206, 91, 43, 63, 240, 202, 72, 63, 250, 170, 86, 190, 38, 38, 142, 0, 127, 0, 0, 127, 0, 57, 0, 56, 195, 95, 40, 62, 240, 202, 72, 63, 250, 170, 86, 190, 38, 38, 142, 0, 127, 0, 0, 127, 0, 57, 0, 56, 59, 50, 151, 62, 0, 0, 128, 63, 250, 170, 86, 190, 183, 73, 183, 0, 51, 103, 51, 127, 0, 57, 0, 58, 218, 87, 174, 62, 240, 202, 72, 191, 250, 170, 86, 190, 218, 218, 142, 0, 127, 0, 0, 127, 0, 54, 0, 58, 211, 79, 150, 63, 240, 202, 72, 191, 250, 170, 86, 62, 38, 218, 114, 0, 127, 0, 0, 129, 0, 54, 0, 52, 203, 111, 88, 63, 240, 202, 72, 191, 250, 170, 86, 62, 218, 218, 114, 0, 127, 0, 0, 129, 0, 48, 0, 52, 195, 95, 40, 190, 240, 202, 72, 63, 250, 170, 86, 190, 218, 38, 142, 0, 127, 0, 0, 127, 0, 59, 0, 56, 59, 50, 151, 62, 0, 0, 128, 63, 250, 170, 86, 62, 183, 73, 73, 0, 153, 205, 205, 127, 0, 59, 0, 52, 206, 91, 43, 63, 240, 202, 72, 63, 250, 170, 86, 62, 38, 38, 114, 0, 127, 0, 0, 129, 0, 57, 0, 52, 203, 111, 88, 63, 240, 202, 72, 63, 250, 170, 86, 190, 218, 38, 142, 0, 127, 0, 0, 127, 0, 59, 0, 56, 250, 170, 86, 190, 0, 0, 128, 63, 250, 170, 86, 190, 183, 73, 183, 0, 51, 103, 51, 127, 0, 57, 0, 58, 195, 95, 40, 190, 240, 202, 72, 191, 250, 170, 86, 190, 218, 218, 142, 0, 127, 0, 0, 127, 0, 54, 0, 58, 218, 87, 174, 62, 240, 202, 72, 191, 250, 170, 86, 62, 218, 218, 114, 0, 127, 0, 0, 129, 0, 48, 0, 52, 250, 170, 86, 190, 0, 0, 128, 63, 250, 170, 86, 62, 183, 73, 73, 0, 153, 205, 205, 127, 0, 59, 0, 52, 251, 220, 76, 63, 0, 0, 128, 63, 250, 170, 86, 190, 183, 73, 183, 0, 51, 103, 51, 127, 0, 57, 0, 58, 203, 111, 88, 63, 240, 202, 72, 191, 250, 170, 86, 190, 218, 218, 142, 0, 127, 0, 0, 127, 0, 54, 0, 58, 195, 95, 40, 62, 240, 202, 72, 63, 171, 94, 178, 62, 73, 73, 73, 0, 205, 103, 205, 127, 0, 57, 0, 52, 195, 95, 40, 190, 240, 202, 72, 191, 171, 94, 178, 62, 183, 183, 73, 0, 205, 103, 51, 127, 0, 54, 0, 0, 195, 95, 40, 190, 240, 202, 72, 63, 171, 94, 178, 190, 183, 73, 183, 0, 51, 103, 51, 127, 0, 57, 0, 58, 195, 95, 40, 62, 240, 202, 72, 191, 171, 94, 178, 190, 73, 183, 183, 0, 51, 103, 205, 127, 0, 54, 0, 56, 195, 95, 40, 190, 240, 202, 72, 191, 171, 94, 178, 190, 183, 183, 183, 0, 205, 103, 205, 127, 0, 54, 0, 58, 206, 91, 43, 63, 240, 202, 72, 63, 171, 94, 178, 62, 73, 73, 73, 0, 205, 103, 205, 127, 0, 57, 0, 52, 218, 87, 174, 62, 240, 202, 72, 191, 171, 94, 178, 62, 183, 183, 73, 0, 205, 103, 51, 127, 0, 54, 0, 0, 206, 91, 43, 63, 240, 202, 72, 191, 171, 94, 178, 62, 73, 183, 73, 0, 51, 103, 51, 127, 0, 54, 0, 52, 218, 87, 174, 62, 240, 202, 72, 63, 171, 94, 178, 190, 183, 73, 183, 0, 51, 103, 51, 127, 0, 57, 0, 58, 206, 91, 43, 63, 240, 202, 72, 191, 171, 94, 178, 190, 73, 183, 183, 0, 51, 103, 205, 127, 0, 54, 0, 56, 218, 87, 174, 62, 240, 202, 72, 191, 171, 94, 178, 190, 183, 183, 183, 0, 205, 103, 205, 127, 0, 54, 0, 58, 211, 79, 150, 63, 240, 202, 72, 63, 171, 94, 178, 62, 73, 73, 73, 0, 205, 103, 205, 127, 0, 57, 0, 52, 203, 111, 88, 63, 240, 202, 72, 191, 171, 94, 178, 62, 183, 183, 73, 0, 205, 103, 51, 127, 0, 54, 0, 0, 211, 79, 150, 63, 240, 202, 72, 191, 171, 94, 178, 62, 73, 183, 73, 0, 51, 103, 51, 127, 0, 54, 0, 52, 203, 111, 88, 63, 240, 202, 72, 63, 171, 94, 178, 190, 183, 73, 183, 0, 51, 103, 51, 127, 0, 57, 0, 58, 211, 79, 150, 63, 240, 202, 72, 191, 171, 94, 178, 190, 73, 183, 183, 0, 51, 103, 205, 127, 0, 54, 0, 56, 203, 111, 88, 63, 240, 202, 72, 191, 171, 94, 178, 190, 183, 183, 183, 0, 205, 103, 205, 127, 0, 54, 0, 58, 195, 95, 40, 190, 240, 202, 72, 63, 250, 170, 86, 190, 218, 38, 142, 0, 127, 0, 0, 127, 0, 57, 0, 58, 218, 87, 174, 62, 240, 202, 72, 63, 250, 170, 86, 190, 218, 38, 142, 0, 127, 0, 0, 127, 0, 57, 0, 58, 195, 95, 40, 190, 240, 202, 72, 63, 250, 170, 86, 62, 218, 38, 114, 0, 127, 0, 0, 129, 0, 59, 0, 52, 203, 111, 88, 63, 240, 202, 72, 63, 250, 170, 86, 190, 218, 38, 142, 0, 127, 0, 0, 127, 0, 57, 0, 58, 218, 87, 174, 62, 240, 202, 72, 63, 250, 170, 86, 62, 218, 38, 114, 0, 127, 0, 0, 129, 0, 59, 0, 52, 195, 95, 40, 190, 240, 202, 72, 191, 171, 94, 178, 62, 183, 183, 73, 0, 127, 0, 0, 129, 0, 48, 0, 52, 203, 111, 88, 63, 240, 202, 72, 63, 250, 170, 86, 62, 218, 38, 114, 0, 127, 0, 0, 129, 0, 59, 0, 52, 218, 87, 174, 62, 240, 202, 72, 191, 171, 94, 178, 62, 183, 183, 73, 0, 127, 0, 0, 129, 0, 48, 0, 52, 195, 95, 40, 190, 240, 202, 72, 63, 171, 94, 178, 190, 183, 73, 183, 0, 127, 0, 0, 127, 0, 59, 0, 56, 203, 111, 88, 63, 240, 202, 72, 191, 171, 94, 178, 62, 183, 183, 73, 0, 127, 0, 0, 129, 0, 48, 0, 52, 195, 95, 40, 190, 240, 202, 72, 191, 250, 170, 86, 190, 218, 218, 142, 0, 127, 0, 0, 127, 0, 48, 0, 56, 218, 87, 174, 62, 240, 202, 72, 63, 171, 94, 178, 190, 183, 73, 183, 0, 127, 0, 0, 127, 0, 59, 0, 56, 218, 87, 174, 62, 240, 202, 72, 191, 250, 170, 86, 190, 218, 218, 142, 0, 127, 0, 0, 127, 0, 48, 0, 56, 203, 111, 88, 63, 240, 202, 72, 63, 171, 94, 178, 190, 183, 73, 183, 0, 127, 0, 0, 127, 0, 59, 0, 56, 195, 95, 40, 62, 240, 202, 72, 63, 171, 94, 178, 190, 73, 73, 183, 0, 205, 103, 51, 127, 0, 57, 0, 56, 203, 111, 88, 63, 240, 202, 72, 191, 250, 170, 86, 190, 218, 218, 142, 0, 127, 0, 0, 127, 0, 48, 0, 56, 62, 149, 159, 63, 180, 191, 87, 63, 68, 51, 71, 62, 73, 73, 73, 0, 103, 205, 205, 127, 0, 57, 0, 0, 203, 111, 88, 63, 240, 202, 72, 191, 171, 94, 178, 62, 183, 183, 73, 0, 127, 0, 0, 129, 0, 54, 0, 60, 218, 87, 174, 62, 240, 202, 72, 191, 171, 94, 178, 62, 183, 183, 73, 0, 127, 0, 0, 129, 0, 54, 0, 60, 195, 95, 40, 190, 240, 202, 72, 191, 171, 94, 178, 62, 183, 183, 73, 0, 127, 0, 0, 129, 0, 54, 0, 60, 195, 95, 40, 190, 240, 202, 72, 63, 171, 94, 178, 62, 183, 73, 73, 0, 51, 103, 205, 127, 0, 57, 0, 0, 218, 87, 174, 62, 240, 202, 72, 63, 171, 94, 178, 62, 183, 73, 73, 0, 51, 103, 205, 127, 0, 57, 0, 0, 203, 111, 88, 63, 240, 202, 72, 63, 171, 94, 178, 62, 183, 73, 73, 0, 51, 103, 205, 127, 0, 57, 0, 0, 195, 95, 40, 190, 240, 202, 72, 63, 171, 94, 178, 62, 183, 73, 73, 0, 127, 0, 0, 129, 0, 59, 0, 52, 218, 87, 174, 62, 240, 202, 72, 63, 171, 94, 178, 62, 183, 73, 73, 0, 127, 0, 0, 129, 0, 59, 0, 52, 203, 111, 88, 63, 240, 202, 72, 63, 171, 94, 178, 62, 183, 73, 73, 0, 127, 0, 0, 129, 0, 59, 0, 52, 195, 95, 40, 190, 240, 202, 72, 191, 171, 94, 178, 190, 183, 183, 183, 0, 127, 0, 0, 127, 0, 48, 0, 56, 218, 87, 174, 62, 240, 202, 72, 191, 171, 94, 178, 190, 183, 183, 183, 0, 127, 0, 0, 127, 0, 48, 0, 56, 203, 111, 88, 63, 240, 202, 72, 191, 171, 94, 178, 190, 183, 183, 183, 0, 127, 0, 0, 127, 0, 48, 0, 56 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 3, 0, 5, 0, 4, 0, 6, 0, 8, 0, 7, 0, 9, 0, 11, 0, 10, 0, 2, 0, 9, 0, 12, 0, 11, 0, 9, 0, 13, 0, 14, 0, 15, 0, 3, 0, 12, 0, 10, 0, 16, 0, 17, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 15, 0, 20, 0, 5, 0, 23, 0, 25, 0, 24, 0, 26, 0, 27, 0, 25, 0, 19, 0, 17, 0, 28, 0, 29, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 27, 0, 32, 0, 35, 0, 15, 0, 14, 0, 36, 0, 37, 0, 39, 0, 38, 0, 40, 0, 42, 0, 41, 0, 43, 0, 45, 0, 44, 0, 46, 0, 48, 0, 47, 0, 49, 0, 50, 0, 42, 0, 51, 0, 44, 0, 50, 0, 52, 0, 54, 0, 53, 0, 55, 0, 57, 0, 56, 0, 58, 0, 60, 0, 59, 0, 61, 0, 63, 0, 62, 0, 64, 0, 65, 0, 55, 0, 66, 0, 59, 0, 65, 0, 67, 0, 63, 0, 68, 0, 61, 0, 50, 0, 68, 0, 48, 0, 46, 0, 40, 0, 46, 0, 69, 0, 49, 0, 70, 0, 67, 0, 71, 0, 72, 0, 48, 0, 73, 0, 69, 0, 72, 0, 74, 0, 61, 0, 70, 0, 42, 0, 75, 0, 54, 0, 76, 0, 54, 0, 52, 0, 65, 0, 39, 0, 37, 0, 77, 0, 37, 0, 78, 0, 64, 0, 79, 0, 75, 0, 80, 0, 81, 0, 39, 0, 82, 0, 78, 0, 81, 0, 83, 0, 52, 0, 79, 0, 55, 0, 84, 0, 85, 0, 47, 0, 86, 0, 62, 0, 87, 0, 88, 0, 90, 0, 89, 0, 91, 0, 53, 0, 92, 0, 69, 0, 46, 0, 85, 0, 78, 0, 37, 0, 89, 0, 67, 0, 70, 0, 93, 0, 75, 0, 79, 0, 94, 0, 48, 0, 72, 0, 95, 0, 39, 0, 81, 0, 88, 0, 72, 0, 69, 0, 84, 0, 81, 0, 78, 0, 90, 0, 70, 0, 61, 0, 86, 0, 63, 0, 67, 0, 87, 0, 79, 0, 52, 0, 91, 0, 54, 0, 75, 0, 92, 0, 96, 0, 98, 0, 97, 0, 99, 0, 101, 0, 100, 0, 102, 0, 28, 0, 103, 0, 104, 0, 106, 0, 105, 0, 107, 0, 109, 0, 108, 0, 110, 0, 112, 0, 111, 0, 9, 0, 2, 0, 113, 0, 114, 0, 18, 0, 115, 0, 33, 0, 117, 0, 116, 0, 2, 0, 0, 0, 118, 0, 34, 0, 32, 0, 104, 0, 8, 0, 6, 0, 109, 0, 119, 0, 3, 0, 120, 0, 32, 0, 27, 0, 106, 0, 1, 0, 12, 0, 101, 0, 26, 0, 121, 0, 106, 0, 31, 0, 29, 0, 98, 0, 122, 0, 7, 0, 123, 0, 5, 0, 21, 0, 124, 0, 22, 0, 20, 0, 110, 0, 25, 0, 35, 0, 116, 0, 125, 0, 1, 0, 99, 0, 20, 0, 15, 0, 112, 0, 126, 0, 30, 0, 127, 0, 128, 0, 100, 0, 129, 0, 130, 0, 132, 0, 131, 0, 133, 0, 135, 0, 134, 0, 136, 0, 138, 0, 137, 0, 139, 0, 141, 0, 140, 0, 142, 0, 144, 0, 143, 0, 120, 0, 4, 0, 135, 0, 145, 0, 123, 0, 132, 0, 24, 0, 116, 0, 141, 0, 146, 0, 115, 0, 138, 0, 147, 0, 99, 0, 128, 0, 148, 0, 127, 0, 144, 0, 149, 0, 120, 0, 133, 0, 101, 0, 16, 0, 150, 0, 151, 0, 24, 0, 139, 0, 4, 0, 124, 0, 152, 0, 113, 0, 118, 0, 153, 0, 116, 0, 117, 0, 154, 0, 155, 0, 13, 0, 131, 0, 112, 0, 36, 0, 156, 0, 157, 0, 110, 0, 137, 0, 106, 0, 121, 0, 158, 0, 13, 0, 113, 0, 159, 0, 160, 0, 104, 0, 143, 0, 0, 0, 1, 0, 125, 0, 3, 0, 4, 0, 120, 0, 6, 0, 7, 0, 122, 0, 9, 0, 10, 0, 12, 0, 2, 0, 12, 0, 1, 0, 11, 0, 13, 0, 155, 0, 14, 0, 3, 0, 119, 0, 12, 0, 16, 0, 101, 0, 17, 0, 18, 0, 114, 0, 20, 0, 21, 0, 5, 0, 15, 0, 5, 0, 3, 0, 23, 0, 24, 0, 151, 0, 26, 0, 25, 0, 23, 0, 19, 0, 28, 0, 102, 0, 29, 0, 30, 0, 126, 0, 32, 0, 33, 0, 35, 0, 27, 0, 35, 0, 25, 0, 15, 0, 36, 0, 112, 0, 37, 0, 38, 0, 89, 0, 40, 0, 41, 0, 161, 0, 43, 0, 44, 0, 51, 0, 46, 0, 47, 0, 85, 0, 49, 0, 42, 0, 40, 0, 51, 0, 50, 0, 49, 0, 52, 0, 53, 0, 91, 0, 55, 0, 56, 0, 77, 0, 58, 0, 59, 0, 66, 0, 61, 0, 62, 0, 86, 0, 64, 0, 55, 0, 77, 0, 66, 0, 65, 0, 64, 0, 67, 0, 68, 0, 71, 0, 61, 0, 68, 0, 63, 0, 48, 0, 40, 0, 73, 0, 46, 0, 49, 0, 40, 0, 70, 0, 71, 0, 42, 0, 72, 0, 73, 0, 74, 0, 69, 0, 74, 0, 49, 0, 61, 0, 42, 0, 50, 0, 75, 0, 76, 0, 80, 0, 54, 0, 65, 0, 76, 0, 39, 0, 77, 0, 82, 0, 37, 0, 64, 0, 77, 0, 79, 0, 80, 0, 55, 0, 81, 0, 82, 0, 83, 0, 78, 0, 83, 0, 64, 0, 52, 0, 55, 0, 65, 0, 84, 0, 47, 0, 95, 0, 86, 0, 87, 0, 93, 0, 88, 0, 89, 0, 38, 0, 91, 0, 92, 0, 94, 0, 69, 0, 85, 0, 84, 0, 78, 0, 89, 0, 90, 0, 67, 0, 93, 0, 87, 0, 75, 0, 94, 0, 92, 0, 48, 0, 95, 0, 47, 0, 39, 0, 88, 0, 38, 0, 72, 0, 84, 0, 95, 0, 81, 0, 90, 0, 88, 0, 70, 0, 86, 0, 93, 0, 63, 0, 87, 0, 62, 0, 79, 0, 91, 0, 94, 0, 54, 0, 92, 0, 53, 0, 96, 0, 97, 0, 162, 0, 99, 0, 100, 0, 128, 0, 102, 0, 103, 0, 163, 0, 104, 0, 105, 0, 143, 0, 107, 0, 108, 0, 164, 0, 110, 0, 111, 0, 137, 0, 9, 0, 113, 0, 13, 0, 114, 0, 115, 0, 146, 0, 33, 0, 116, 0, 35, 0, 2, 0, 118, 0, 113, 0, 34, 0, 104, 0, 160, 0, 8, 0, 109, 0, 107, 0, 119, 0, 120, 0, 149, 0, 32, 0, 106, 0, 104, 0, 1, 0, 101, 0, 99, 0, 26, 0, 106, 0, 27, 0, 31, 0, 98, 0, 96, 0, 122, 0, 123, 0, 145, 0, 5, 0, 124, 0, 4, 0, 22, 0, 110, 0, 157, 0, 25, 0, 116, 0, 24, 0, 125, 0, 99, 0, 147, 0, 20, 0, 112, 0, 110, 0, 126, 0, 127, 0, 148, 0, 128, 0, 129, 0, 165, 0, 130, 0, 131, 0, 159, 0, 133, 0, 134, 0, 166, 0, 136, 0, 137, 0, 111, 0, 139, 0, 140, 0, 167, 0, 142, 0, 143, 0, 105, 0, 120, 0, 135, 0, 133, 0, 145, 0, 132, 0, 130, 0, 24, 0, 141, 0, 139, 0, 146, 0, 138, 0, 136, 0, 147, 0, 128, 0, 168, 0, 148, 0, 144, 0, 142, 0, 149, 0, 133, 0, 169, 0, 101, 0, 150, 0, 100, 0, 151, 0, 139, 0, 170, 0, 4, 0, 152, 0, 135, 0, 113, 0, 153, 0, 159, 0, 116, 0, 154, 0, 141, 0, 155, 0, 131, 0, 171, 0, 112, 0, 156, 0, 111, 0, 157, 0, 137, 0, 172, 0, 106, 0, 158, 0, 105, 0, 13, 0, 159, 0, 131, 0, 160, 0, 143, 0, 173, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 660,
"material": ExtResource( 1 ),
"name": "BateriaLanterna",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 174
}

[sub_resource type="BoxShape" id=2]

[node name="BateriaLanterna" type="Spatial"]
script = ExtResource( 2 )

[node name="BateriaLanterna" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.518115, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AreaBateriaLanterna" type="Area" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="AreaBateriaLanterna"]
shape = SubResource( 2 )

[node name="TempoBateria" type="Timer" parent="."]
wait_time = 0.1
[connection signal="body_entered" from="AreaBateriaLanterna" to="." method="_on_AreaBateriaLanterna_body_entered"]
[connection signal="body_exited" from="AreaBateriaLanterna" to="." method="_on_AreaBateriaLanterna_body_exited"]
[connection signal="timeout" from="TempoBateria" to="." method="_on_TempoBateria_timeout"]
